title global option, better templates, little architecture fixes, bug fixes

--- a/config/parameters.yaml
+++ b/config/parameters.yaml
@@ -27,6 +27,7 @@ parameters:
     f0ska.autogrid.view.friendly_id: 'autogrid' # Used for frontend container id, class and link fragment generation.
     f0ska.autogrid.grid.pagination_limits: [ 10, 50, 100 ] # Set it with a single value to remove grid limit selector.
     f0ska.autogrid.grid.text.truncate: 55 # Maximal content length in grid cell.
+    f0ska.autogrid.common.show_entity_title: true # Just a grid title.
 
     # Basic action buttons display.
     f0ska.autogrid.grid.view_button_in_grid: true
