--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,13 @@
     },
     "require": {
         "php": ">=8.1",
-        "symfony/framework-bundle": ">=6.4"
+        "symfony/framework-bundle": ">=6.4",
+        "symfony/translation": "*",
+        "symfony/security-bundle": "*",
+        "symfony/form": "*",
+        "symfony/validator": "*",
+        "symfony/twig-bundle": "*",
+        "symfony/asset-mapper": "*",
+        "symfony/mime": "*"
     }
 }
